samples/_failures_safe/1761710800_def4a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7bf6b747.c: In function ‘main’:
./samples/SAFE/__tmp_7bf6b747.c:161:1: error: expected declaration or statement at end of input
  161 | int main(void) {
      | ^~~
